# ak_tools

./: .gitignore  README.md  pyproject.toml
NeoKPI/: .gitignore  README.md  app.js  index.html  server.js  styles.css  telemetry-graphs.js
NeoKPI/markrEdge/: video-annotator.js
NeoKPI/markrEdge/visual-components/: debug.js  dsf.js  grapher.js  header.js  inertial-bar.js  multilane.js
NeoKPI/telemetry/: constants.js  events.js  index.js  json-view.js  model.js  plot.js
src/ak_tools/: __init__.py  analytics_log_parser.py  avc_api.py  avc_cli.py  change_configs.py  cli.py  clipboard.py  config_manager.py  data_utils.py  model_fetcher.py  neo_server.py  parallel_processing.py  plot_helper.py  read_summary.py  s3_presigner.py  sync_alert.py
