[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ak"
version = "0.1.0"
description = "Common scripts for data engineering and computer vision"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "click>=8.1",
  "numpy",
  "pandas",
  "opencv-python"
]

[project.scripts]
ak = "ak_tools.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
